Fix some spacing shit

--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,8 @@ blockquote{
     padding: 2em;
 	background: none;
 	text-align: left;
-  font-family: Montserrat, arial, sans-serif;	font-size: 16px;
+  font-family: Sofia Pro, arial, sans-serif;
+  font-size: 16px;
 	font-size: 13px;
     font-style: normal;
 	line-height: 1.7;
@@ -476,7 +477,7 @@ hr.black{
 }
 
 .number{
-    font-family: Montserrat, arial, sans-serif;
+    font-family: Sofia Pro, arial, sans-serif;
 	font-weight: 400;
 }
 
@@ -532,7 +533,8 @@ hr.black{
 
 .wide-heading{
 	display: block;
-	margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 	font-size: 48px;
 	font-weight: 800;
   letter-spacing: 5px;
@@ -553,7 +555,7 @@ hr.black{
 	text-decoration: none;
 }
 .sub-heading{
-	font-family: Montserrat, arial, sans-serif;
+	font-family: Sofia Pro, arial, sans-serif;
   font-size: 16px;
 	font-style: italic;
 	text-align: center;
@@ -1110,7 +1112,8 @@ a.btn-mod:focus{
 .hs-line-13 .serif,
 .hs-line-14 .serif,
 .hs-line-15 .serif{
-   	font-family: Montserrat, arial, sans-serif;	font-style: italic;
+   	font-family: Sofia Pro, arial, sans-serif;
+  font-style: italic;
     font-weight: normal;
     text-transform: none;
     letter-spacing: normal;
@@ -2327,7 +2330,7 @@ a.logo:hover{
 .st-point{
 	margin-right: -5px;
 	color: #e41919;
-	font-family: Montserrat, arial, sans-serif;
+	font-family: Sofia Pro, arial, sans-serif;
 	font-weight: 400;
 }
 .section-heading{
@@ -2842,7 +2845,8 @@ a.logo:hover{
 }
 .team-item-role{
 	margin-bottom: 5px;
-  font-family: Montserrat, arial, sans-serif;	font-size: 16px;
+  font-family: Sofia Pro, arial, sans-serif;
+  font-size: 16px;
 	font-size: 13px;
 	font-style: italic;
 }
@@ -2930,7 +2934,8 @@ a.logo:hover{
 }
 
 .features-descr{
-  font-family: Montserrat, arial, sans-serif;	font-size: 16px;
+  font-family: Sofia Pro, arial, sans-serif;
+  font-size: 16px;
 	font-size: 16px;
 	font-style: italic;
 	color: rgba(255,255,255, .75);
@@ -2975,7 +2980,7 @@ a.logo:hover{
 	position: absolute;
 	top: 0;
 	left: -50px;
-	font-family: Montserrat, arial, sans-serif;
+	font-family: Sofia Pro, arial, sans-serif;
 	font-size: 120px;
 	font-weight: 700;
 	text-align: center;
@@ -3055,7 +3060,7 @@ a.logo:hover{
    ============================== */
 
 .count-number{
-	font-family: Montserrat, arial, sans-serif;
+	font-family: Sofia Pro, arial, sans-serif;
 	font-size: 48px;
 	font-weight: 700;
 	line-height: 1.3;
@@ -3247,7 +3252,8 @@ a.logo:hover{
 	font-weight: 700;
 }
 .work-grid-3 .work-descr{
-  font-family: Montserrat, arial, sans-serif;	font-size: 16px;
+  font-family: Sofia Pro, arial, sans-serif;
+  font-size: 16px;
 	font-size: 14px;
 	font-style: italic;
 }
@@ -3551,7 +3557,8 @@ a.logo:hover{
 .testimonial-author{
     margin-top: 20px;
     color: #999;
-  font-family: Montserrat, arial, sans-serif;	font-size: 16px;
+  font-family: Sofia Pro, arial, sans-serif;
+  font-size: 16px;
 	font-size: 14px;
 	font-style: italic;
     text-align: center;
@@ -3671,7 +3678,7 @@ a.logo:hover{
     z-index: 2;
 }
 .lp-date-num{
-    font-family: Montserrat, arial, sans-serif;
+    font-family: Sofia Pro, arial, sans-serif;
     font-size: 30px;
 }
 .lp-descr{
@@ -3701,7 +3708,8 @@ a.logo:hover{
     letter-spacing: 1px;
 }
 .lp-author{
-  font-family: Montserrat, arial, sans-serif;	font-size: 16px;
+  font-family: Sofia Pro, arial, sans-serif;
+  font-size: 16px;
 	font-size: 14px;
 	font-style: italic;
     color: #bbb;
@@ -3985,7 +3993,7 @@ a.logo:hover{
 }
 .ci-phone{
     font-size: 24px;
-    font-family: Montserrat, arial, sans-serif;
+    font-family: Sofia Pro, arial, sans-serif;
     font-weight: 400;
     line-height: 1.2;
 }
@@ -4303,7 +4311,7 @@ a.logo:hover{
 .date-num{
 	display: block;
 	margin-bottom: 3px;
-	font-family: Montserrat, arial, sans-serif;
+	font-family: Sofia Pro, arial, sans-serif;
 	font-size: 18px;
     color: #111;
 }
@@ -4466,7 +4474,7 @@ a.blog-item-more:hover{
 
 .pagination{
 	font-size: 13px;
-    font-family: Montserrat, arial, sans-serif;
+    font-family: Sofia Pro, arial, sans-serif;
 }
 .pagination a{
 	display: inline-block;
